2003-10-30  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c: Added binary output as hex to listfile.

2003-10-30  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c: Added support for quoted strings in defb, added comments,
	added long option support and help/version information.
	* README: Updated documentation.

2002-05-15  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c (rd_expr): Added equations in expr and bugfix
	(assemble): Added if/else/endif

2002-04-28  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* assembler.c: Started changelog